--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -30,3 +30,23 @@ span a{
   padding: 12px;
   color: black;
 }
+
+.main.container{
+  display: flex;
+  border: 1px solid black;
+}
+
+.column.large{
+  display: flex;
+  border: 1px solid black;
+}
+
+.column.medium{
+  display: flex;
+  border: 1px solid black;
+}
+
+.column.small{
+  display: flex;
+  border: 1px solid black;
+}
